--- a/app/src/main/res/layout/activity_hidro.xml
+++ b/app/src/main/res/layout/activity_hidro.xml
@@ -7,16 +7,21 @@
     android:layout_height="match_parent"
     android:background="#F2F2F2"
     tools:context=".Hidro">
+
     <LinearLayout
-        android:layout_width="match_parent"
+        android:id="@+id/linearLayout5"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:orientation="vertical"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
         tools:ignore="MissingConstraints">
 
         <androidx.constraintlayout.widget.ConstraintLayout
-            android:background="#28A138"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:background="#28A138">
 
             <ImageButton
                 android:id="@+id/arrow_left"
@@ -50,75 +55,94 @@
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
-
+        <ImageView
+            android:id="@+id/imghidro"
+            android:layout_width="match_parent"
+            android:layout_height="240dp"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentEnd="true"
+            app:srcCompat="@drawable/hidro1"
+            tools:ignore="MissingConstraints"
+            tools:layout_editor_absoluteX="0dp"
+            tools:layout_editor_absoluteY="-10dp" />
     </LinearLayout>
 
-    <ImageView
-        android:id="@+id/imghidro"
-        android:layout_width="408dp"
-        android:layout_height="350dp"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentEnd="true"
-        app:srcCompat="@drawable/hidro1"
-        tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteX="0dp"
-        tools:layout_editor_absoluteY="-10dp" />
 
     <View
         android:id="@+id/rectangle_1"
-        android:layout_width="331dp"
-        android:layout_height="65dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
+        android:layout_marginStart="40dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginEnd="40dp"
+        android:layout_marginBottom="12dp"
         android:background="#FFFF"
-        tools:layout_editor_absoluteX="40dp"
-        tools:layout_editor_absoluteY="292dp"
+        app:layout_constraintBottom_toTopOf="@+id/rectangle_2"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout5"
+        app:layout_constraintVertical_bias="1.0"
         tools:ignore="MissingConstraints" />
 
     <TextView
         android:id="@+id/txtKD"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="12dp"
+        android:layout_marginBottom="17dp"
         android:text="Kondisi Daun"
         android:textSize="16sp"
         android:textStyle="bold"
-        tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteX="52dp"
-        tools:layout_editor_absoluteY="318dp" />
+        app:layout_constraintBottom_toBottomOf="@+id/rectangle_1"
+        app:layout_constraintStart_toStartOf="@+id/rectangle_1"
+        tools:ignore="MissingConstraints" />
 
     <Button
         android:id="@+id/buttonKD"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
 
-        android:text="Normal"
+        android:layout_marginTop="10dp"
+        android:layout_marginEnd="14dp"
         android:background="@drawable/btnhijau"
+        android:text="Normal"
         android:textColor="#276831"
         android:textColorHint="#AC0D0D"
-        tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteX="269dp"
-        tools:layout_editor_absoluteY="301dp" />
+        app:layout_constraintEnd_toEndOf="@+id/rectangle_1"
+        app:layout_constraintTop_toTopOf="@+id/rectangle_1"
+        tools:ignore="MissingConstraints" />
 
     <View
         android:id="@+id/rectangle_2"
-        android:layout_width="331dp"
+        android:layout_width="0dp"
         android:layout_height="65dp"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
+        android:layout_marginStart="40dp"
+        android:layout_marginTop="67dp"
+        android:layout_marginEnd="40dp"
+        android:layout_marginBottom="64dp"
         android:background="#FFFF"
-        tools:layout_editor_absoluteX="40dp"
-        tools:layout_editor_absoluteY="368dp"
+        app:layout_constraintBottom_toBottomOf="@+id/buttonLS"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/buttonKD"
         tools:ignore="MissingConstraints" />
 
     <TextView
         android:id="@+id/txtSP"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="13dp"
+        android:layout_marginTop="19dp"
         android:text="Status Penyiraman"
         android:textSize="16sp"
         android:textStyle="bold"
-        tools:layout_editor_absoluteX="53dp"
-        tools:layout_editor_absoluteY="387dp"
+        app:layout_constraintStart_toStartOf="@+id/rectangle_2"
+        app:layout_constraintTop_toTopOf="@+id/rectangle_2"
         tools:ignore="MissingConstraints" />
 
 
@@ -126,24 +150,32 @@
         android:id="@+id/buttonSP"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginEnd="14dp"
+        android:layout_marginBottom="7dp"
         android:background="@drawable/btnmerah"
         android:backgroundTint="#F8E2E2"
         android:text="Mati"
         android:textColor="#890B0B"
         android:textColorHint="#AC0D0D"
-        tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteX="269dp"
-        tools:layout_editor_absoluteY="378dp" />
+        app:layout_constraintBottom_toBottomOf="@+id/rectangle_2"
+        app:layout_constraintEnd_toEndOf="@+id/rectangle_2"
+        tools:ignore="MissingConstraints" />
 
     <View
         android:id="@+id/rectangle_3"
-        android:layout_width="331dp"
+        android:layout_width="0dp"
         android:layout_height="67dp"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
+        android:layout_marginStart="40dp"
+        android:layout_marginTop="31dp"
+        android:layout_marginEnd="40dp"
+        android:layout_marginBottom="32dp"
         android:background="#FFFF"
-        tools:layout_editor_absoluteX="40dp"
-        tools:layout_editor_absoluteY="440dp"
+        app:layout_constraintBottom_toTopOf="@+id/arrow_right"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/txtSP"
         tools:ignore="MissingConstraints" />
 
 
@@ -151,41 +183,49 @@
         android:id="@+id/txtLS"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="13dp"
+        android:layout_marginBottom="21dp"
         android:text="Last Scanned"
         android:textSize="16sp"
         android:textStyle="bold"
-        tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteX="53dp"
-        tools:layout_editor_absoluteY="464dp" />
+        app:layout_constraintBottom_toBottomOf="@+id/rectangle_3"
+        app:layout_constraintStart_toStartOf="@+id/rectangle_3"
+        tools:ignore="MissingConstraints" />
 
     <Button
         android:id="@+id/buttonLS"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginEnd="6dp"
+        android:layout_marginBottom="10dp"
         android:background="@drawable/btnbiru"
         android:text="3/12/2023  13.47"
         android:textColor="#004F8F"
         android:textColorHint="#AC0D0D"
-        tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteX="242dp"
-        tools:layout_editor_absoluteY="449dp" />
+        app:layout_constraintBottom_toBottomOf="@+id/rectangle_3"
+        app:layout_constraintEnd_toEndOf="@+id/rectangle_3"
+        tools:ignore="MissingConstraints" />
 
     <TextView
         android:id="@+id/txtHP"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="12dp"
+        android:layout_marginTop="3dp"
         android:text="Histori penyiraman"
         android:textSize="16sp"
         android:textStyle="bold"
-        tools:layout_editor_absoluteX="52dp"
-        tools:layout_editor_absoluteY="510dp"
+        app:layout_constraintStart_toStartOf="@+id/rectangle_3"
+        app:layout_constraintTop_toBottomOf="@+id/rectangle_3"
         tools:ignore="MissingConstraints" />
 
 
     <TextView
         android:id="@+id/hp1"
-        android:layout_width="312dp"
-        android:layout_height="34dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginTop="9dp"
+        android:layout_marginBottom="9dp"
         android:background="#E8EDF1"
         android:backgroundTint="#E8EDF1"
         android:ems="10"
@@ -193,27 +233,36 @@
         android:inputType="text"
         android:text="3/12/2023 13:47"
         android:textColor="#252A31"
-        tools:ignore="MissingConstraints,TouchTargetSizeCheck,DuplicateClickableBoundsCheck"
-        tools:layout_editor_absoluteX="52dp"
-        tools:layout_editor_absoluteY="548dp" />
+        app:layout_constraintBottom_toTopOf="@+id/hp2"
+        app:layout_constraintEnd_toEndOf="@+id/hp2"
+        app:layout_constraintStart_toStartOf="@+id/hp2"
+        app:layout_constraintTop_toTopOf="@+id/arrow_right"
+        tools:ignore="MissingConstraints,TouchTargetSizeCheck,DuplicateClickableBoundsCheck" />
 
     <ImageButton
         android:id="@+id/arrow_right"
-        android:layout_width="50dp"
+        android:layout_width="0dp"
         android:layout_height="50dp"
-        android:layout_marginStart="312dp"
+        android:layout_marginTop="42dp"
+        android:layout_marginBottom="43dp"
         android:background="@android:color/transparent"
         android:src="@drawable/arrow_right"
-        app:layout_constraintBottom_toBottomOf="@+id/hp1"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/hp1"
-        app:layout_constraintVertical_bias="0.562"
-        tools:ignore="SpeakableTextPresentCheck" />
+        app:layout_constraintBottom_toBottomOf="@+id/arrow_right1"
+        app:layout_constraintEnd_toEndOf="@+id/arrow_right1"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="@+id/arrow_right1"
+        app:layout_constraintTop_toBottomOf="@+id/buttonLS"
+        app:layout_constraintVertical_bias="0.0"
+        tools:ignore="MissingConstraints,SpeakableTextPresentCheck,TouchTargetSizeCheck" />
 
     <TextView
         android:id="@+id/hp2"
-        android:layout_width="312dp"
+        android:layout_width="0dp"
         android:layout_height="34dp"
+        android:layout_marginStart="47dp"
+        android:layout_marginTop="52dp"
+        android:layout_marginEnd="47dp"
+        android:layout_marginBottom="50dp"
         android:background="#E8EDF1"
         android:backgroundTint="#E8EDF1"
         android:ems="10"
@@ -221,27 +270,32 @@
         android:inputType="text"
         android:text="3/12/2023 13:47"
         android:textColor="#252A31"
-        tools:ignore="DuplicateIds,MissingConstraints,TouchTargetSizeCheck"
-        tools:layout_editor_absoluteX="52dp"
-        tools:layout_editor_absoluteY="591dp" />
+        app:layout_constraintBottom_toBottomOf="@+id/arrow_right2"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/arrow_right"
+        tools:ignore="DuplicateIds,MissingConstraints,TouchTargetSizeCheck" />
 
     <ImageButton
         android:id="@+id/arrow_right1"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:layout_marginStart="312dp"
+        android:layout_width="0dp"
+        android:layout_height="40dp"
+        android:layout_marginBottom="99dp"
         android:background="@android:color/transparent"
         android:src="@drawable/arrow_right"
-        app:layout_constraintBottom_toBottomOf="@+id/hp1"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/hp2"
-        app:layout_constraintVertical_bias="0.152"
-        tools:ignore="SpeakableTextPresentCheck" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="@+id/arrow_right2"
+        app:layout_constraintStart_toStartOf="@+id/arrow_right2"
+        tools:ignore="MissingConstraints,SpeakableTextPresentCheck,TouchTargetSizeCheck" />
 
     <TextView
         android:id="@+id/hp3"
-        android:layout_width="312dp"
-        android:layout_height="34dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginStart="46dp"
+        android:layout_marginTop="7dp"
+        android:layout_marginEnd="46dp"
+        android:layout_marginBottom="7dp"
         android:background="#E8EDF1"
         android:backgroundTint="#E8EDF1"
         android:ems="10"
@@ -249,22 +303,25 @@
         android:inputType="text"
         android:text="3/12/2023 13:47"
         android:textColor="#252A31"
-        tools:ignore="DuplicateIds,MissingConstraints,TouchTargetSizeCheck"
-        tools:layout_editor_absoluteX="53dp"
-        tools:layout_editor_absoluteY="632dp" />
+        app:layout_constraintBottom_toBottomOf="@+id/arrow_right2"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/arrow_right2"
+        tools:ignore="DuplicateIds,MissingConstraints,TouchTargetSizeCheck" />
 
     <ImageButton
         android:id="@+id/arrow_right2"
-        android:layout_width="50dp"
+        android:layout_width="0dp"
         android:layout_height="50dp"
-        android:layout_marginStart="312dp"
+        android:layout_marginTop="43dp"
+        android:layout_marginEnd="2dp"
+        android:layout_marginBottom="56dp"
         android:background="@android:color/transparent"
         android:src="@drawable/arrow_right"
-        app:layout_constraintBottom_toBottomOf="@+id/hp1"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/hp3"
-        app:layout_constraintVertical_bias="0.07"
-        tools:ignore="SpeakableTextPresentCheck" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="@+id/hp2"
+        app:layout_constraintTop_toTopOf="@+id/arrow_right1"
+        tools:ignore="MissingConstraints,SpeakableTextPresentCheck,TouchTargetSizeCheck" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
