--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -55,10 +55,14 @@
                         android:textSize="16sp"
                         android:textStyle="bold" />
                     <ImageView
+                        android:id="@+id/h2"
                         android:layout_width="match_parent"
                         android:layout_height="160dp"
                         android:scaleType="centerCrop"
                         android:src="@drawable/h2" />
+
+
+
 
                     <LinearLayout
                         android:layout_width="match_parent"
@@ -86,7 +90,6 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="vertical">
-
                     <TextView
                         android:id="@+id/Txttomat"
                         android:layout_width="wrap_content"
@@ -97,7 +100,6 @@
                         android:textColor="#282828"
                         android:textSize="16sp"
                         android:textStyle="bold" />
-
                     <ImageView
                         android:layout_width="match_parent"
                         android:layout_height="160dp"
@@ -149,6 +151,9 @@
                         android:layout_height="160dp"
                         android:scaleType="centerCrop"
                         android:src="@drawable/h3" />
+
+
+
 
                     <LinearLayout
                         android:layout_width="match_parent"
